basic authentication completed

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,18 @@
 <h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<p>Welcome to {{title}} an ancient alternative for modern ailments</p>
+<br>
+<br>
+<p>Enter nice intro info about TCM</p>
+<br>
+<br>
+<p>Ready to be part of the community?</p>
+<a href="/signup"> Sign Up </a> 
+<br>
+<br>
+<p>Already have an account?</p>
+<a href="/login"> Log In </a>
+<br>
+<br>
+<a href="/auth/facebook">Login With Facebook</a>
+<br>
+<a href="/auth/google">Login With Google</a>
