--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,17 +2,38 @@
 <p>Welcome to {{title}} an ancient alternative for modern ailments</p>
 <br>
 <br>
-<p>Enter nice intro info about TCM</p>
+<div class ="intro">
+<h4>Who are we?</h4>
+<p>QiOptimazer is a growing community of individuals using Tradicional Chinese Medicine to enhace their lives</p>
+<h4>What is Traditional Chinese Medicine?</h4>
+<p>It’s a timeless bridge that can initiate and support change and growth in any and every 
+  life dimension: physical, mental, emotional, and spiritual. It’s a medicine of extraordinary 
+  relationships. Every TCM principle, theory, and healing practice reflects and harmonizes with 
+  the relationships that exist within natural law. TCM teaches you how to live a life of balance,
+   wellness, and harmony. </p>
+<h4>What is Qi?</h4>
+<p>Qi is energy in the very broadest sense possible, it is universal, it embraces all manifestations
+  of energy, most material aspects of energy (such as the earth beneath your feet, your computer, 
+  and flesh and blood) to the most immaterial aspects (light, movement, heat, nerve impulses, thought, and emotion). </p>
+<h4>Why Optimize Qi?</h4>
+<p>Qi relates to both substance and function,Qi is in a state of continuous flux, transforming endlessly from one aspect 
+  of Qi into another. It is neither created nor is it ever destroyed for this reason its optimizations allow for overall good health.</p>
+</div>
+
 <br>
 <br>
-<p>Ready to be part of the community?</p>
+<p><b>Ready to be part of the community?</b></p>
 <a href="/signup"> Sign Up </a> 
+<br>
+<br>
+<a href="/auth/facebook">Login With Facebook</a>
+<br>
+<a href="/auth/google">Login With Google</a>
 <br>
 <br>
 <p>Already have an account?</p>
 <a href="/login"> Log In </a>
 <br>
 <br>
-<a href="/auth/facebook">Login With Facebook</a>
 <br>
-<a href="/auth/google">Login With Google</a>
+<a href="/login"> Log Out </a>
