--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,7 +4,7 @@
 <br>
 <div class ="intro">
 <h4>Who are we?</h4>
-<p>QiOptimazer is a growing community of individuals using Tradicional Chinese Medicine to enhace their lives</p>
+<p>QiOptimizer is a growing community of individuals using Tradicional Chinese Medicine to enhace their lives</p>
 <h4>What is Traditional Chinese Medicine?</h4>
 <p>It’s a timeless bridge that can initiate and support change and growth in any and every 
   life dimension: physical, mental, emotional, and spiritual. It’s a medicine of extraordinary 
