Updated Models - routes and views

--- a/views/initial/welcome-page.hbs
+++ b/views/initial/welcome-page.hbs
@@ -10,4 +10,14 @@ in essence this should be the main menu --}}
 
 <a href="/basics">Learn the basics</a>
 <br>
+<br>
+<a href="/search-treatment">Search for Treatments</a>
+<br>
+<br>
+<a href="/search-herbs">Herbs and Supplements</a>
+<br>
+<br>
+<a href="/Profile">My Profile</a>
+<br>
+<br>
 <a href="/logout"> Log Out </a>
