Herbs and techniques CRUD done

--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -28,12 +28,14 @@
     <label for="password-input"> Password </label>
     <input type="password" name="password" id="password-input" placeholder="Your secret code">
   </div>
-
+ <div>
+    <label for="location"> Location </label>
+    <input type="text" name="location" id="location-input" placeholder="Where are you located?">
+  </div>
   <div>
     <label for="picture"> Profile Picture</label>
     <input type="file" name="photo" id="profilepic"> 
-      
-      </div>
+  </div>
   </div>
 
 
