--- a/views/initial/welcome-page.hbs
+++ b/views/initial/welcome-page.hbs
@@ -11,10 +11,10 @@ in essence this should be the main menu --}}
 <a href="/basics">Learn the basics</a>
 <br>
 <br>
-<a href="/search-treatment">Search for Treatments</a>
+<a href="/techniques">Search for Treatments</a>
 <br>
 <br>
-<a href="/search-herbs">Herbs and Supplements</a>
+<a href="/herbs">Herbs and Supplements</a>
 <br>
 <br>
 <a href="/profile">My Profile</a>
