--- a/views/herbs/herbs.hbs
+++ b/views/herbs/herbs.hbs
@@ -1,6 +1,6 @@
 <h1>Herbs</h1>
 {{#each herbs}}
-    <p><a href="herb/{{this._id}}">{{this.name}}</a></p>
+    <p><a href="herbs/{{this._id}}">{{this.name}}</a></p>
     <a href="/herbs/edit?herb_id={{this._id}}" class="edit-button">EDIT</a>
 {{/each}}
 
@@ -8,4 +8,4 @@
 <br>
 
 <p>Don't see something that should be listed?</p>
-<a href="/herbs/add">Add Alternative Technique</a>
+<a href="/herbs/add">Add a New Herb</a>
