--- a/views/profile/editProfile.hbs
+++ b/views/profile/editProfile.hbs
@@ -7,11 +7,16 @@
   <label for="">Email:</label>
   <input type="text" name="email" value="{{user.email}}">
 
-  <label for="image">profilePic</label>
-  <input type="file" name="profilePic" value="{{user.image}}">
+  <label for="">Username:</label>
+  <input type="text" name="email" value="{{user.username}}">
 
   <label for="">Location:</label>
   <input type="text" name="location" value="{{user.location}}">
+
+  <label for="image">profilePic</label>
+  <input type="file" name="profilePic" value="{{user.image}}">
+
+ 
 
 
 
