--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -9,14 +9,18 @@
 
 <form action="/login" method="post">
   <div>
-    <label for="email-input"> Email </label>
-    <input type="email" name="email" id="email-input" placeholder="your email">
+    <label for="username-input"> Username </label>
+    <input type="username" name="username" id="username-input" placeholder="your username">
   </div>
 
   <div>
     <label for="password-input"> Password </label>
     <input type="password" name="password" id="password-input" placeholder="your secret code">
   </div>
+
+    {{#if message}}
+    <div class="error-message">{{ message }}</div>
+  {{/if}}
 
   <button> Log In </button>
 </form>
