--- a/views/herbs/herbs-edit.hbs
+++ b/views/herbs/herbs-edit.hbs
@@ -2,7 +2,7 @@
 
 <form action="/herbs/edit?herb_id={{herb._id}}" method="post">
   <label for="">Name:</label>
-  <input type="text" name="name" value="{{herb.title}}">
+  <input type="text" name="name" value="{{herb.name}}">
 
   <label for="">Description:</label>
   <input type="text" name="description" value="{{herb.description}}">
@@ -11,7 +11,7 @@
   <input type="file" name="image" value="{{herb.image}}">
 
   <label for="">Symptoms:</label>
-  <input type="text" name="symptoms" value="{{herb.symptoms}">
+  <input type="text" name="symptoms" value="{{herb.symptoms}}">
 
 
 
