--- a/views/initial/welcome-page.hbs
+++ b/views/initial/welcome-page.hbs
@@ -17,7 +17,7 @@ in essence this should be the main menu --}}
 <a href="/herbs">Herbs and Supplements</a>
 <br>
 <br>
-<a href="/profile">My Profile</a>
+<a href="/profile/{{user._id}}">My Profile</a>
 <br>
 <br>
 <a href="/logout"> Log Out </a>
