--- a/views/techniques/techniques-edit.hbs
+++ b/views/techniques/techniques-edit.hbs
@@ -2,7 +2,7 @@
 
 <form action="/techniques/edit?other_id={{other._id}}" method="post">
   <label for="">Name:</label>
-  <input type="text" name="title" value="{{other.title}}">
+  <input type="text" name="title" value="{{other.name}}">
 
   <label for="">Description:</label>
   <input type="text" name="description" value="{{other.description}}">
@@ -11,7 +11,7 @@
   <input type="file" name="image" value="{{other.image}}">
 
   <label for="">Symptoms:</label>
-  <input type="text" name="symptoms" value="{{other.symptoms}">
+  <input type="text" name="symptoms" value="{{other.symptoms}}">
 
 
 
