--- a/views/herbs/herbs-detail.hbs
+++ b/views/herbs/herbs-detail.hbs
@@ -29,6 +29,23 @@
   <button type="submit">ADD</button>
 </form>
 
+<h3>Add it to my Treatments</h3>
+<form action="/profile/treatments/add?user_id={{user}}" method="post">
+  <label for="">Type:</label>
+  <input type="text" name="name" value ="{{herb.name}}">
+  <div>
+    <label for="date-input">
+      When did you begin?
+    </label>
+    <input type="date" name="date" id="date-input">
+  </div>
+  <label for="">How many times a day?</label>
+  <textarea type="number" name="time"></textarea>
+  <label for="">Tell us your experience:</label>
+  <textarea type="text" name="comments"></textarea>
+
+  <button type="submit">ADD</button>
+</form>
 
 
 <a href="/welcome">Return</a>
