--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,16 +1,10 @@
+//Styling for Homepage
 
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+.intro-info{
+  
 }
-
-a {
-  color: #00B7FF;
-}
-
-
 body {
-  padding: 50px;
+ 
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
@@ -40,4 +34,25 @@ a {
 .review-item span {
   font-size: 10px;
   color: grey;
+}
+
+
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) {
+  
+ }
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
+  
+ }
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) { 
+
+ }
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
+
 }
