--- a/views/initial/welcome-page.hbs
+++ b/views/initial/welcome-page.hbs
@@ -20,4 +20,6 @@ in essence this should be the main menu --}}
 <a href="/profile/{{user._id}}">My Profile</a>
 <br>
 <br>
+<p>Would you like to find a TCM specialist near you?</p>
+<a href="/tcm-nearyou">Search Here</a>
 <a href="/logout"> Log Out </a>
