--- a/views/logout.hbs
+++ b/views/logout.hbs
@@ -1,7 +1,13 @@
+<div class="goodbye">
 <h2>Until next time!</h2>
+</div>
+
 
 <p>Thank you for visiting</p>
 
+
+<div class="exit-footer">
 <a href="/"> Home </a>
 <br>
 <a href="/login"> Log In</a>
+</div>
