--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -8,8 +8,59 @@
   </p>
 {{/if}}
 
+<!-- Default form register -->
+<form action="/signup" method="post" class="text-center border border-light p-5">
+
+    <p class="h4 mb-4"><h1>Sign up</h1></p>
+
+    <div class="form-row mb-4">
+        <div class="col">
+            <!-- First name -->
+                  
+            <input type="text" name="name" id="name-input" class="form-control" placeholder="Your name">
+        </div>
+        <div class="col">
+            <!-- Last name -->
+            <input type="text" id="defaultRegisterFormLastName" class="form-control" placeholder="Last name">
+        </div>
+    </div>
+
+    <!-- E-mail -->
+    <input type="email" id="defaultRegisterFormEmail" class="form-control mb-4" placeholder="E-mail">
+
+    <!-- Password -->
+    <input type="password" id="defaultRegisterFormPassword" class="form-control" placeholder="Password" aria-describedby="defaultRegisterFormPasswordHelpBlock">
+    <small id="defaultRegisterFormPasswordHelpBlock" class="form-text text-muted mb-4">
+        At least 8 characters and 1 digit
+    </small>
+
+    <!-- Phone number -->
+    <input type="text" id="defaultRegisterPhonePassword" class="form-control" placeholder="Phone number" aria-describedby="defaultRegisterFormPhoneHelpBlock">
+    <small id="defaultRegisterFormPhoneHelpBlock" class="form-text text-muted mb-4">
+        Optional - for two step authentication
+    </small>
+
+     <!-- Sign up button -->
+    <button class="btn btn-info my-4 btn-block" type="submit">Sign In</button>
+
+
+
+    <!-- Terms of service -->
+    <p>By clicking
+        <em>Sign up</em> you agree to our
+        <a href="" target="_blank">terms of service</a> and
+        <a href="" target="_blank">terms of service</a>. </p>
+
+</>
+
+
+
+
+
+
 <form action="/signup" method="post">
-  <div>
+
+ <div>
     <label for="name-input"> Name </label>
     <input type="text" name="name" id="name-input" placeholder="Your name">
   </div>
@@ -42,9 +93,3 @@
   <button> Create New Account </button>
 </form>
 
-<p>
-  Already have an account?
-  <a href="/login">
-    Log in.
-  </a>
-</p>
