--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,4 +1,4 @@
-<h2>Sign Up</h2>
+<h2>{{title}}</h2>
 
 <p>Welcome, we hope to help you find an alternative way of living</p>
 
@@ -16,80 +16,39 @@
     <div class="form-row mb-4">
         <div class="col">
             <!-- First name -->
-                  
-            <input type="text" name="name" id="name-input" class="form-control" placeholder="Your name">
+        <input type="text" name="name" id="name-input" class="form-control" placeholder="Your name">
         </div>
         <div class="col">
-            <!-- Last name -->
-            <input type="text" id="defaultRegisterFormLastName" class="form-control" placeholder="Last name">
+            <!-- Username -->
+            <input  type="text" name="username" id="username-input"  class="form-control" placeholder="User Name">
         </div>
     </div>
 
     <!-- E-mail -->
-    <input type="email" id="defaultRegisterFormEmail" class="form-control mb-4" placeholder="E-mail">
+    <input type="email" name="email" id="email-input" class="form-control mb-4" placeholder="E-mail">
 
     <!-- Password -->
-    <input type="password" id="defaultRegisterFormPassword" class="form-control" placeholder="Password" aria-describedby="defaultRegisterFormPasswordHelpBlock">
-    <small id="defaultRegisterFormPasswordHelpBlock" class="form-text text-muted mb-4">
-        At least 8 characters and 1 digit
-    </small>
+    <input  type="password" name="password" id="password-input" class="form-control" placeholder="Password">
+   <br>
+    <!-- Location -->
+    <input type="text" name="location" id="location-input" class="form-control" placeholder="Your location">
+   
+<br>     
+<div class="col">
+   <label for="picture"> Profile Picture</label>
+    <input type="file" name="photo" id="profilepic"> 
+</div>
 
-    <!-- Phone number -->
-    <input type="text" id="defaultRegisterPhonePassword" class="form-control" placeholder="Phone number" aria-describedby="defaultRegisterFormPhoneHelpBlock">
-    <small id="defaultRegisterFormPhoneHelpBlock" class="form-text text-muted mb-4">
-        Optional - for two step authentication
-    </small>
+<!-- Sign up button -->
+    <button class="btn btn-info my-4 btn-block" type="submit">Create New Account</button>
 
-     <!-- Sign up button -->
-    <button class="btn btn-info my-4 btn-block" type="submit">Sign In</button>
-
-
-
+<br>
     <!-- Terms of service -->
     <p>By clicking
         <em>Sign up</em> you agree to our
         <a href="" target="_blank">terms of service</a> and
         <a href="" target="_blank">terms of service</a>. </p>
 
-</>
-
-
-
-
-
-
-<form action="/signup" method="post">
-
- <div>
-    <label for="name-input"> Name </label>
-    <input type="text" name="name" id="name-input" placeholder="Your name">
-  </div>
-
-  <div>
-    <label for="email-input"> Email </label>
-    <input type="email" name="email" id="email-input" placeholder="Your email">
-  </div>
-
-  <div>
-    <label for="username"> Username </label>
-    <input type="text" name="username" id="username-input" placeholder="Get Creative">
-  </div>
-
-   <div>
-    <label for="password-input"> Password </label>
-    <input type="password" name="password" id="password-input" placeholder="Your secret code">
-  </div>
- <div>
-    <label for="location"> Location </label>
-    <input type="text" name="location" id="location-input" placeholder="Where are you located?">
-  </div>
-  <div>
-    <label for="picture"> Profile Picture</label>
-    <input type="file" name="photo" id="profilepic"> 
-  </div>
-  </div>
-
-
-  <button> Create New Account </button>
 </form>
+
 
