--- a/views/index.hbs
+++ b/views/index.hbs
@@ -33,10 +33,12 @@
 
 <div class="row">
   <div class="col-md-6">
-    <img src=>
+    <img src="/images/happygroup.jpg">
   <h4><b>Who are we?</b></h4>
 <p>QiOptimizer is a growing community of individuals using Tradicional Chinese Medicine to enhace their lives</p></div>
-  <div class="col-md-6"><h4><b>What is Traditional Chinese Medicine?</b></h4>
+  <div class="col-md-6">
+    <img src="/images/traditional-chinese-medicine-title-921b41.jpg">
+    <h4><b>What is Traditional Chinese Medicine?</b></h4>
 <p>It’s a timeless bridge that can initiate and support change and growth in any and every 
   life dimension: physical, mental, emotional, and spiritual. It’s a medicine of extraordinary 
   relationships. Every TCM principle, theory, and healing practice reflects and harmonizes with 
@@ -45,11 +47,15 @@
 </div>
 
 <div class="row">
-  <div class="col-md-6"><h4><b>What is Qi?</b></h4>
+  <div class="col-md-6">
+    <img src="/images/CHI-ENERGY-DIVINE-LIFE-FORCE1.jpg">
+    <h4><b>What is Qi?</b></h4>
 <p>Qi is energy in the very broadest sense possible, it is universal, it embraces all manifestations
   of energy, most material aspects of energy (such as the earth beneath your feet, your computer, 
   and flesh and blood) to the most immaterial aspects (light, movement, heat, nerve impulses, thought, and emotion). </p></div>
-  <div class="col-md-6"><h4><b>Why Optimize Qi?</b></h4>
+  <div class="col-md-6">
+    <img src="/images/590x300 Yin_Yang_Galaxy_Loop.jpg">
+    <h4><b>Why Optimize Qi?</b></h4>
 <p>Qi relates to both substance and function, Qi is in a state of continuous flux, transforming endlessly from one aspect 
   of Qi into another. It is neither created nor is it ever destroyed for this reason its optimizations allow for overall good health.</p>
 </div></div>
