change mongo uri

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -33,7 +33,7 @@
 
 <div class="row">
   <div class="col-md-6">
-    <img src="/images/happygroup.jpg">
+    <img src="/images/happygroup.jpg" class="img-rounded" width="300" height="150">
   <h4><b>Who are we?</b></h4>
 <p>QiOptimizer is a growing community of individuals using Tradicional Chinese Medicine to enhace their lives</p></div>
   <div class="col-md-6">
