--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,16 +1,21 @@
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #3bd6a8;" id="nav-bar">
-  <a class="navbar-brand" href="#"><b>QiOptimizer</b></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+  <a class="navbar-brand" href="#">
+    <b>QiOptimizer</b>
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01"
+    aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarColor05">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/">Home
+          <span class="sr-only">(current)</span>
+        </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/signup"> Sign Up </a> 
+        <a class="nav-link" href="/signup"> Sign Up </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/login"> Log In</a>
@@ -19,50 +24,56 @@
         <a class="nav-link" href="/auth/facebook">Login With Facebook</a>
       </li>
     </ul>
-      </div>
+  </div>
 </nav>
+<blockquote class="blockquote text-center">
 
 
-<div class ="intro-info">
+  <h1>{{title}}</h1>
+  <br>
+  <p class="slogan">Welcome to {{title}} an ancient alternative for modern ailments</p>
+</blockquote>
 
-  <h1>{{title}}</h1> 
 
-<p class = "slogan">Welcome to {{title}} an ancient alternative for modern ailments</p>
 <br>
 <br>
-
 <div class="row">
   <div class="col-md-6">
-    <img src="/images/happygroup.jpg" class="img-rounded" width="300" height="150">
-  <h4><b>Who are we?</b></h4>
-<p>QiOptimizer is a growing community of individuals using Tradicional Chinese Medicine to enhace their lives</p></div>
+    <img src="/images/happygroup.jpg" class="img-rounded" width="600" height="300">
+    <h4>
+      <b>Who are we?</b>
+    </h4>
+    <p>QiOptimizer is a growing community of individuals using Tradicional Chinese Medicine to enhace their lives</p>
+  </div>
   <div class="col-md-6">
-    <img src="/images/traditional-chinese-medicine-title-921b41.jpg">
-    <h4><b>What is Traditional Chinese Medicine?</b></h4>
-<p>It’s a timeless bridge that can initiate and support change and growth in any and every 
-  life dimension: physical, mental, emotional, and spiritual. It’s a medicine of extraordinary 
-  relationships. Every TCM principle, theory, and healing practice reflects and harmonizes with 
-  the relationships that exist within natural law. TCM teaches you how to live a life of balance,
-   wellness, and harmony. </p></div>
+    <img src="/images/traditional-chinese-medicine-title-921b41.jpg" class="img-rounded" width="600" height="300">
+    <h4>
+      <b>What is Traditional Chinese Medicine?</b>
+    </h4>
+    <p>It’s a timeless bridge that can initiate and support change and growth in any and every life dimension: physical, mental,
+      emotional, and spiritual. It’s a medicine of extraordinary relationships. Every TCM principle, theory, and healing
+      practice reflects and harmonizes with the relationships that exist within natural law. TCM teaches you how to live
+      a life of balance, wellness, and harmony. </p>
+  </div>
 </div>
 
 <div class="row">
   <div class="col-md-6">
-    <img src="/images/CHI-ENERGY-DIVINE-LIFE-FORCE1.jpg">
-    <h4><b>What is Qi?</b></h4>
-<p>Qi is energy in the very broadest sense possible, it is universal, it embraces all manifestations
-  of energy, most material aspects of energy (such as the earth beneath your feet, your computer, 
-  and flesh and blood) to the most immaterial aspects (light, movement, heat, nerve impulses, thought, and emotion). </p></div>
+    <img src="/images/CHI-ENERGY-DIVINE-LIFE-FORCE1.jpg" class="img-rounded" width="600" height="300">
+    <h4>
+      <b>What is Qi?</b>
+    </h4>
+    <p>Qi is energy in the very broadest sense possible, it is universal, it embraces all manifestations of energy, most material
+      aspects of energy (such as the earth beneath your feet, your computer, and flesh and blood) to the most immaterial
+      aspects (light, movement, heat, nerve impulses, thought, and emotion). </p>
+  </div>
   <div class="col-md-6">
-    <img src="/images/590x300 Yin_Yang_Galaxy_Loop.jpg">
-    <h4><b>Why Optimize Qi?</b></h4>
-<p>Qi relates to both substance and function, Qi is in a state of continuous flux, transforming endlessly from one aspect 
-  of Qi into another. It is neither created nor is it ever destroyed for this reason its optimizations allow for overall good health.</p>
-</div></div>
+    <img src="/images/590x300 Yin_Yang_Galaxy_Loop.jpg" class="img-rounded" width="600" height="300">
+    <h4>
+      <b>Why Optimize Qi?</b>
+    </h4>
+    <p>Qi relates to both substance and function, Qi is in a state of continuous flux, transforming endlessly from one aspect
+      of Qi into another. It is neither created nor is it ever destroyed for this reason its optimizations allow for overall
+      good health.</p>
+  </div>
 </div>
-
-
-
-<br>
-<br>
-
