--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,17 +1,96 @@
 //Styling for Homepage
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');
+.carousel-caption {
+  top: 30%;
+  bottom: auto;
+}
+.navbar { margin-bottom:0px !important; }
+.carousel-caption { margin-top:0px !important }
+/*---Media Queries --*/
+@media (max-width: 992px) {
 
-.intro-info{
+  }
+@media (max-width: 768px) {
   
 }
-body {
- 
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+@media (max-width: 576px) {
+  
 }
 
+
+/*---Firefox Bug Fix --*/
+.carousel-item {
+  transition: -webkit-transform 0.5s ease;
+  transition: transform 0.5s ease;
+  transition: transform 0.5s ease, -webkit-transform 0.5s ease;
+  -webkit-backface-visibility: visible;
+  backface-visibility: visible;
+}
+/*--- Fixed Background Image --*/
+figure {
+  position: relative;
+  width: 100%;
+  height: 60%;
+  margin: 0!important;
+}
+.fixed-wrap {
+  clip: rect(0, auto, auto, 0);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+#fixed {
+  background-image: url('img/mac.png');
+  position: fixed;
+  display: block;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center center;
+  -webkit-transform: translateZ(0);
+          transform: translateZ(0);
+  will-change: transform;
+}
+/*--- Bootstrap Padding Fix --*/
+[class*="col-"] {
+    padding: 1rem;
+}
+
+
+
+
+
+/*
+Extra small (xs) devices (portrait phones, less than 576px)
+No media query since this is the default in Bootstrap
+
+Small (sm) devices (landscape phones, 576px and up)
+@media (min-width: 576px) { ... }
+
+Medium (md) devices (tablets, 768px and up)
+@media (min-width: 768px) { ... }
+
+Large (lg) devices (desktops, 992px and up)
+@media (min-width: 992px) { ... }
+
+Extra (xl) large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) { ... }
+*/
+
+body {
+  font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif;
+}
 a {
   color: #00B7FF;
 }
 
+
+
+//Styling for editing-buttons
 .edit-button {
   margin-left:20px; 
   color: #fff;
