--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -33,14 +33,16 @@
   <label for="">Type:</label>
   <input type="text" name="name">
   <div>
-    <label for="date-input">
+    <label for="date_start-input">
       When did you begin?
     </label>
-    <input type="date" name="date" id="date-input">
+    <input type="date" name="date" id="date_start-input">
   </div>
   <label for="">How many times a day?</label>
   <textarea type="number" name="time"></textarea>
-  <label for="">Tell us your experience:</label>
+   <label for="">For how long?</label>
+  <textarea type="text" name="duration"></textarea>
+  <label for="">Your experience:</label>
   <textarea type="text" name="comments"></textarea>
 
   <button type="submit">ADD</button>
