--- a/views/index.hbs
+++ b/views/index.hbs
@@ -15,10 +15,10 @@
 <body>
 
 <!-- Navigation -->
-<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top" style="background-color: #70334b"> 
+<nav  class="navbar navbar-expand-md sticky-top" style="background-color:#181529"> 
 <div class="container-fluid">
  
-  <a class="navbar-brand" href="/home"><img src ="/images/logo.png" height=50></a>
+  <a class="navbar-brand" href="/home"><img src ="/images/logo2.png" height=50></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -26,13 +26,13 @@
   <div class="collapse navbar-collapse" id="navbarResponsive">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
-      <a class="nav-link" href="/login">Login</a>
+      <a class="nav-link text-white" href="/login">Login</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/signup">Sign Up</a>
+        <a class="nav-link text-white" href="/signup">Sign Up</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/auth/facebook">Login With Facebook</a>
+        <a class="nav-link text-white" href="/auth/facebook">Login With Facebook</a>
    
       </li>
     </ul>
@@ -95,45 +95,31 @@
   </a>
 </div>
 
-<!--- Jumbotron -->
-<div class="container-fluid">
-  <div class ="row jumbotron">
-    <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
-      <p class="lead">Web hosting</p>
+<!--- Connect -->
+<div class="container-fluid padding" style="background-color:#181529">
+  <div class="row text-center padding">
+    <div class="col-12">
+      <h2 class="text-white display-3">Connect</h2>
+    </div>
+    <div class="col-12 social padding">
+      <a href="#"><i class="fab fa-facebook"></i></a>
+      <a href="#"><i class="fab fa-twitter"></i></a>
+      <a href="#"><i class="fab fa-google-plus-g"></i></a>
+       <a href="#"><i class="fab fa-instagram"></i></a>
+      <a href="#"><i class="fab fa-youtube"></i></a>
     </div>
   </div>
-</div>
+<!--- Footer --->
 
-<!--- Welcome Section -->
+<footer class="page-footer font-small white">
 
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">© 2018 Copyright:
+    <a href="https://mdbootstrap.com/bootstrap-tutorial/"> MDBootstrap.com</a>
+  </div>
+  <!-- Copyright -->
 
-<!--- Three Column Section -->
-
-
-<!--- Two Column Section -->
-
-
-<!--- Fixed background -->
-
-
-<!--- Emoji Section -->
-
-  
-<!--- Meet the team -->
-
-
-<!--- Cards -->
-
-
-<!--- Two Column Section -->
-
-
-<!--- Connect -->
-
-
-<!--- Footer -->
-
-
+</footer>
 </body>
 </html>
 
