--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -104,27 +104,101 @@ figure {
 [class*="col-"] {
   padding: 1rem; }
 
-/*
-Extra small (xs) devices (portrait phones, less than 576px)
-No media query since this is the default in Bootstrap
+.login_bg {
+  /* The image used */
+  background-image: url("/images/196511-050-F63E85DD.jpg");
+  /* Full height */
+  height: 100%;
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover; }
 
-Small (sm) devices (landscape phones, 576px and up)
-@media (min-width: 576px) { ... }
+.loginbody {
+  background: #5900a6; }
 
-Medium (md) devices (tablets, 768px and up)
-@media (min-width: 768px) { ... }
+.title-home {
+  position: relative;
+  align-content: center; }
 
-Large (lg) devices (desktops, 992px and up)
-@media (min-width: 992px) { ... }
+.form-signin {
+  max-width: 330px;
+  padding: 15px;
+  margin: 0 auto; }
 
-Extra (xl) large devices (large desktops, 1200px and up)
-@media (min-width: 1200px) { ... }
-*/
+.form-signin .form-signin-heading, .form-signin .checkbox {
+  margin-bottom: 10px; }
+
+.form-signin .checkbox {
+  font-weight: normal; }
+
+.form-signin .form-control {
+  position: relative;
+  font-size: 16px;
+  height: auto;
+  padding: 10px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box; }
+
+.form-signin .form-control:focus {
+  z-index: 2; }
+
+.form-signin input[type="text"] {
+  margin-bottom: -1px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0; }
+
+.form-signin input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0; }
+
+.account-wall {
+  margin-top: 20px;
+  padding: 40px 0px 20px 0px;
+  background-color: #f7f7f7;
+  -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3); }
+
+.login-title {
+  color: #555;
+  font-size: 18px;
+  font-weight: 400;
+  display: block; }
+
+.profile-img {
+  width: 96px;
+  height: 96px;
+  margin: 0 auto 10px;
+  display: block;
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  border-radius: 50%; }
+
+.need-help {
+  margin-top: 10px; }
+
+.new-account {
+  display: block;
+  margin-top: 10px; }
+
 body {
   font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif; }
 
 a {
   color: #00B7FF; }
+
+.signup_bg {
+  /* The image used */
+  background-image: url("/images/196511-050-F63E85DD.jpg");
+  /* Full height */
+  height: 100%;
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover; }
 
 .edit-button {
   margin-left: 20px;
