--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,5 +1,27 @@
-<h2>Log In</h2>
-<p>Welcome back</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
+<body class="loginbody">
+      <div class="login_bg">
+
+
+    <div class="row">
+        <div class="col-sm-11 col-sm-offset-1 hid">
+            <div class="row">
+                <div class="col-sm-3 col-sm-offset-4 text-center">
+                  <img src="/images/logo2.png">
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 
 {{#if errorMessage}}
   <p class="error-message">
@@ -7,27 +29,38 @@
   </p>
 {{/if}}
 
-<form action="/login" method="post">
-  <div>
-    <label for="username-input"> Username </label>
-    <input type="username" name="username" id="username-input" placeholder="your username">
-  </div>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-6 col-md-4 col-md-offset-4">
+                        <div class="account-wall">
+              <h1 class="text-center login-title"><b>Welcome Back</b></h1>
+                <img class="profile-img" src="/images/cats.jpg"
+                    alt="">
+                <form class="form-signin" action="/login" method="post">
+               <label for="username-input"> Username </label>
+              <input type="username" name="username" class="form-control"  placeholder="Your username">  
+                <label for="password-input"> Password </label>
+                <input type="password" name="password" class="form-control" placeholder="Your secret code">
+                <button class="btn btn-lg btn-primary btn-block" type="submit">
+                    Sign in</button>
+                <label class="checkbox pull-left">
+                    <input type="checkbox" value="remember-me">
+                    Remember me
+                </label>
+               
+                </form>
+            </div>
 
-  <div>
-    <label for="password-input"> Password </label>
-    <input type="password" name="password" id="password-input" placeholder="your secret code">
-  </div>
-
-    {{#if message}}
-    <div class="error-message">{{ message }}</div>
-  {{/if}}
-
-  <button> Log In </button>
-</form>
-
-<p>
-  Haven't joined yet?
+            <p class="text-center new-account">
+  Haven't joined yet?<br>
   <a href="/signup">
   Don't hesitate any longer.
   </a>
 </p>
+           
+        </div>
+    </div>
+</div>
+</div>
+</body>
+
