--- a/views/concepts/basics.hbs
+++ b/views/concepts/basics.hbs
@@ -1,8 +1,22 @@
-<h2>Four Key TCM Principles</h2>
+<section id="basics">
 
-<ol>
-  
-  <li><b>Your body is an integrated whole.</b> Each and every structure in your body is an integral 
+
+    <div class="row">
+        <div class="col-sm-11 col-sm-offset-1 hid">
+            <div class="row">
+                <div class="col-sm-3 col-sm-offset-4 text-center">
+                  <img src="/images/logo2.png">
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+<h1  class="title text-center display-2"><b>Four Key TCM Principles</b></h1>
+
+<div class="principles">
+<ol class="custom-counter">
+    <li><b>Your body is an integrated whole.</b> Each and every structure in your body is an integral 
     and necessary part of the whole. Along with your mind, emotions, and spirit, 
     your physical body structures form a miraculously complex, interrelated system 
     that is powered by life force, or energy.  </li>
@@ -15,5 +29,12 @@
    <li><b>Prevention is the best cure.</b> Do you know your body is continually revealing signs about the state 
      of your health? Let’s face it, it’s common to ignore these signs or symptoms until something more 
      complicated arises. TCM teaches you how to interpret what your body is telling you.</li>
-   
+ 
 </ol>
+</div>
+
+ <p><a href="/welcome">Dashboard</a></p>
+</section>
+
+
+ 
