--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -140,9 +140,7 @@ figure {
   background-repeat: no-repeat;
   background-size: cover;
 }
-.loginbody{
-  background: #5900a6;
-}
+
 
 .title-home{
   position: relative;
@@ -193,10 +191,12 @@ figure {
 {
     margin-top: 20px;
     padding: 40px 0px 20px 0px;
-    background-color: #f7f7f7;
+    background-color: #f6f9fc;
     -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
     -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    border-radius: 15px;
+    
 }
 .login-title
 {
@@ -273,22 +273,148 @@ a {
 }
 
 
-// Small devices (landscape phones, 576px and up)
-@media (min-width: 576px) {
-  
- }
+//Welcome Page
+#hero {
+  width: 100%;
+  height: 100vh;
+  background: url("/images/hero-bg.jpg") top center;
+  background-size: cover;
+  position: relative;
+}
 
-// Medium devices (tablets, 768px and up)
-@media (min-width: 768px) {
-  
- }
+@media (min-width: 1024px) {
+  #hero {
+    background-attachment: fixed;
+  }
+}
 
-// Large devices (desktops, 992px and up)
-@media (min-width: 992px) { 
+#hero:before {
+  content: "";
+  background: rgba(0, 0, 0, 0.6);
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+}
 
- }
+#hero .hero-container {
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+}
 
-// Extra large devices (large desktops, 1200px and up)
-@media (min-width: 1200px) {
+#hero h1 {
+  margin: 30px 0 10px 0;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 56px;
+  text-transform: uppercase;
+  color: #fff;
+}
 
+@media (max-width: 768px) {
+  #hero h1 {
+    font-size: 28px;
+    line-height: 36px;
+  }
+}
+
+#hero h2 {
+  color: #eee;
+  margin-bottom: 50px;
+  font-size: 24px;
+}
+
+@media (max-width: 768px) {
+  #hero h2 {
+    font-size: 18px;
+    line-height: 24px;
+    margin-bottom: 30px;
+  }
+}
+
+#hero .btn-get-started {
+  font-family: "Poppins", sans-serif;
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 8px 28px;
+  border-radius: 50px;
+  transition: 0.5s;
+  margin: 10px;
+  border: 2px solid #fff;
+  color: #fff;
+}
+
+#hero .btn-get-started:hover {
+  background: #2dc997;
+  border: 2px solid #2dc997;
+}
+
+//Basics
+#basics {
+  width: 100%;
+  height: 100vh;
+  background: url("/images/hero-bg.jpg") top center;
+  background-size: cover;
+  position: relative;
+}
+
+.title{
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+body {
+  font-size: 1.2em;
+  font-family: "Helvetica Neue", Helvetica, sans-serif;
+  margin: 50px;
+   
+}
+
+.custom-counter {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  font-size: 1.5em;
+  font-family: "Helvetica Neue", Helvetica, sans-serif;
+}
+
+.custom-counter li {
+  counter-increment: step-counter;
+  margin-bottom: 10px;
+}
+
+.custom-counter li::before {
+  content: counter(step-counter);
+  margin-right: 5px;
+  font-size: 80%;
+  background-color: rgb(55, 28, 105);
+  color: white;
+  font-weight: bold;
+  padding: 3px 8px;
+  border-radius: 3px;
+}
+
+.principles{
+  width: 50%;
+  position: relative; left: 50%;
+transform: translateX(-50%);
+}
+
+
+//Herbs page
+
+.add-herbs{
+  font-size: 2.0em;
 }
